--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body{
+    background-color: darkgray;
+    margin: 0;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -16,4 +21,17 @@ li#title {
     background-color: #3d3b3b;
     text-decoration: none;
     font-size: 20px;
+}
+
+a {
+    display: inline;
+    margin: 0;
+    padding: 12px;
+    color: aliceblue;
+    background-color: #3d3b3b;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: #686565
 }
